chore: added typescript to lint-staged target

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "prettier": "^2.5.1"
   },
   "lint-staged": {
-    "*.js": "eslint --cache --fix",
-    "*.{js,css,md}": "prettier --write"
+    "*.{js, ts}": "eslint --cache --fix",
+    "*.{js, ts, css,md}": "prettier --write"
   }
 }
