--- a/libs/power-modal-playground/package.json
+++ b/libs/power-modal-playground/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "power-modal",
+  "name": "@okunofukai/power-modal-playground",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
