--- a/libs/power-modal-playground/src/lib/package.json
+++ b/libs/power-modal-playground/src/lib/package.json
@@ -8,7 +8,8 @@
   "peerDependencies": {
     "@emotion/react": "^11.8.1",
     "@use-gesture/react": "^10.2.6",
-    "react": "^17.x || ^16.x",
+    "react": ">=16",
+    "react-dom": ">=16",
     "react-spring": "^9.4.3"
   },
   "scripts": {
