--- a/packages/power-modal/package.json
+++ b/packages/power-modal/package.json
@@ -7,6 +7,7 @@
   "version": "0.1.0",
   "peerDependencies": {
     "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
     "@use-gesture/react": "^10.2.6",
     "react": ">=16",
     "react-dom": ">=16",
@@ -33,11 +34,14 @@
     "@emotion/babel-preset-css-prop": "^11.2.0",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-eslint": "^8.0.1",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.0",
     "rollup": "^2.67.3",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-dts": "^4.1.0"
+  },
+  "dependencies": {
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11"
   }
 }
