--- a/packages/power-modal/package.json
+++ b/packages/power-modal/package.json
@@ -8,10 +8,8 @@
   "peerDependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
-    "@use-gesture/react": "^10.2.6",
     "react": ">=16",
-    "react-dom": ">=16",
-    "react-spring": "^9.4.3"
+    "react-dom": ">=16"
   },
   "scripts": {
     "build": "rollup --config rollup.config.ts"
@@ -41,6 +39,8 @@
     "rollup-plugin-dts": "^4.1.0"
   },
   "dependencies": {
+    "react-spring": "^9.4.3",
+    "@use-gesture/react": "^10.2.6",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11"
   }
