--- a/packages/power-modal/package.json
+++ b/packages/power-modal/package.json
@@ -38,9 +38,10 @@
     "rollup-plugin-dts": "^4.1.0"
   },
   "dependencies": {
-    "react-spring": "^9.4.3",
-    "@use-gesture/react": "^10.2.6",
     "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11"
+    "@types/react-dom": "^17.0.11",
+    "@use-gesture/react": "^10.2.6",
+    "facepaint": "^1.2.1",
+    "react-spring": "^9.4.3"
   }
 }
