--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-tsdoc": "^0.2.14",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.4",
     "prettier": "^2.5.1"
